feat: skill bar position optimize

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         .skill-bar {
             position: absolute;
             right: 20px;
-            top: 20px;
+            top: 55px;
             display: flex;
             flex-direction: column;
             gap: 15px;
@@ -627,12 +627,12 @@
 
     <!-- 技能按钮 -->
     <div class="skill-bar">
-        <div class="btn" onclick="toggleMute()" id="mute-btn">
-            🔊 音效: 开
+        <div class="skill-icon" onclick="toggleMute()" id="mute-btn">
+            🔊
         </div>
 
-        <div class="btn" onclick="openSettings()">
-            📷 换脸
+        <div class="skill-icon" onclick="openSettings()">
+            📷
         </div>
 
         <div class="skill-icon" onclick="useSkill('egg')">
