--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <!-- SEO Meta Tags -->
     <meta name="description" content="一款超解压的HTML5第一视角发泄游戏！提供左右勾拳、扔鸡蛋、丢炸弹等多种攻击方式。特色包含：逼真的CSS老板形象、动态战损效果（鼻青脸肿、流鼻血）、自定义头像功能以及带感的打击音效。适配手机与PC，随时随地释放压力！">
-    <meta name="keywords" content="发泄游戏, 胖揍老板, Beat the Boss, 网页游戏, HTML5游戏, 减压, 休闲游戏, CSS绘图, 恶搞老板, 办公室游戏, 解压神器">
+    <meta name="keywords" content="发泄游戏, 胖揍老板, Beat the Boss, 暴揍老板, 网页游戏, HTML5游戏, 减压, 休闲游戏, CSS绘图, 恶搞老板, 办公室游戏, 解压神器">
     <meta name="author" content="nycode.jn@gmail.com">
 
     <!-- Open Graph / Social Sharing -->
