--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <!-- SEO Meta Tags -->
     <meta name="description" content="一款超解压的HTML5第一视角发泄游戏！提供左右勾拳、扔鸡蛋、丢炸弹等多种攻击方式。特色包含：逼真的CSS老板形象、动态战损效果（鼻青脸肿、流鼻血）、自定义头像功能以及带感的打击音效。适配手机与PC，随时随地释放压力！">
-    <meta name="keywords" content="发泄游戏, 胖揍老板, Beat the Boss, 暴揍老板, 网页游戏, HTML5游戏, 减压, 休闲游戏, CSS绘图, 恶搞老板, 办公室游戏, 解压神器">
+    <meta name="keywords" content="发泄游戏, 胖揍老板, Beat the Boss, 爆揍老板, 网页游戏, HTML5游戏, 减压, 休闲游戏, CSS绘图, 恶搞老板, 办公室游戏, 解压神器">
     <meta name="author" content="nycode.jn@gmail.com">
 
     <!-- Open Graph / Social Sharing -->
-    <meta property="og:title" content="胖揍老板：终极版 - 在线解压神器">
+    <meta property="og:title" content="暴揍老板： - 在线解压神器">
     <meta property="og:description" content="压力大？来揍老板！支持自定义头像、真实打击音效和动态战损效果。手机PC都能玩！">
     <meta property="og:type" content="website">
     <!-- 这里可以使用你的游戏截图URL，目前暂用图标代替 -->
     <meta property="og:image" content="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🥊</text></svg>">
 
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🥊</text></svg>">
-    <title>胖揍老板-揍飞这该死的资本家</title>
+    <title>暴揍老板-揍飞这该死的资本家</title>
     <style>
         /* --- 全局设置 --- */
         body {
