--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <meta name="author" content="nycode.jn@gmail.com">
 
     <!-- Open Graph / Social Sharing -->
-    <meta property="og:title" content="暴揍老板： - 在线解压神器">
+    <meta property="og:title" content="胖揍老板： - 在线解压神器">
     <meta property="og:description" content="压力大？来揍老板！支持自定义头像、真实打击音效和动态战损效果。手机PC都能玩！">
     <meta property="og:type" content="website">
     <!-- 这里可以使用你的游戏截图URL，目前暂用图标代替 -->
     <meta property="og:image" content="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🥊</text></svg>">
 
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🥊</text></svg>">
-    <title>暴揍老板-揍飞这该死的资本家</title>
+    <title>胖揍老板-揍飞这该死的资本家</title>
     <style>
         /* --- 全局设置 --- */
         body {
